@@ -1,8 +1,15 @@
-<?php get_header(); ?>
+<?php
+/*
+Template Name: Post Slider
+*/
+
+get_header(); ?>
 
 	<div id="wrap" class="container clearfix">
 		
 		<section id="content" class="primary" role="main">
+		
+		<?php get_template_part( 'featured-content-slider' ); ?>
 		
 		<?php if (have_posts()) : while (have_posts()) : the_post();
 
